--- a/index.html
+++ b/index.html
@@ -9,12 +9,59 @@
 <body>
     <main data-active-index="0" data-debug="false">
         <div class="card-stack">
-          <div class="card"><img src="Logo fondo blanco.jpg" /></div>
-          <div class="card"><img src="ppp.jpg" /></div>
-          <div class="card"><img src="Imagen de WhatsApp 2025-05-17 a las 18.48.21_e3672090.jpg" /></div>
-          <div class="card"><img src="mama 15.jpg" /></div>
-          <div class="card"><img src="dia de la madre 2025.jpg" /></div>
-        </div>
+  <div class="card">
+    <img 
+      src="Logo fondo blanco.jpg" 
+      alt="Logo fondo blanco"
+      width="300" height="400"
+      loading="eager"
+      fetchpriority="high"
+      decoding="auto"
+      style="object-fit:cover;width:100%;height:100%;"
+    />
+  </div>
+  <div class="card">
+    <img 
+      src="ppp.jpg"
+      alt="PPP"
+      width="300" height="400"
+      loading="lazy"
+      decoding="auto"
+      style="object-fit:cover;width:100%;height:100%;"
+    />
+  </div>
+  <div class="card">
+    <img
+      src="Imagen de WhatsApp 2025-05-17 a las 18.48.21_e3672090.jpg"
+      alt="Foto WhatsApp"
+      width="300" height="400"
+      loading="lazy"
+      decoding="auto"
+      style="object-fit:cover;width:100%;height:100%;"
+    />
+  </div>
+  <div class="card">
+    <img
+      src="mama 15.jpg"
+      alt="Mamá"
+      width="300" height="400"
+      loading="lazy"
+      decoding="auto"
+      style="object-fit:cover;width:100%;height:100%;"
+    />
+  </div>
+  <div class="card">
+    <img
+      src="dia de la madre 2025.jpg"
+      alt="Día de la madre 2025"
+      width="300" height="400"
+      loading="lazy"
+      decoding="auto"
+      style="object-fit:cover;width:100%;height:100%;"
+    />
+  </div>
+</div>
+
         <div class="scroller">
           <div class="scroll-item"></div>
           <div class="scroll-item"></div>
