--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="prefetch" href="https://antonio-mora003.github.io/servicio/">
+    <link rel="prefetch" href="https://antonio-mora003.github.io/Servicios/">
 </head>
 <body>
     <!-- Contenedor Principal Minimalista -->
@@ -63,7 +63,7 @@
     <!-- IFRAME oculto para precargar la web destino -->
     <iframe
         id="preloadFrame"
-        src="https://antonio-mora003.github.io/servicio/"
+        src="https://antonio-mora003.github.io/Servicios/"
         style="display:none; visibility:hidden; width:0; height:0; border:0;"
         tabindex="-1"
         aria-hidden="true"
